--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ python:
   # - "nightly" # currently points to 3.6-dev
 
 # command to install dependencies
-# install: "pip install -r requirements.txt"
+install: "pip install -r requirements.txt --use-mirrors"
 
 # command to run tests
-# script: make test
+script: nosetests
